standards/gnds-2.0-alpha/alpha/c/src/v2.0/tsl/ThermalNeutronScatteringLaw_incoherentInelastic.h

// --- Const-aware handles.
typedef const struct ThermalNeutronScatteringLaw_incoherentInelasticClass *const ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic;
typedef       struct ThermalNeutronScatteringLaw_incoherentInelasticClass *const ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic;
typedef const struct ThermalNeutronScatteringLaw_incoherentInelasticClass *      Handle2ConstThermalNeutronScatteringLaw_incoherentInelastic;
typedef       struct ThermalNeutronScatteringLaw_incoherentInelasticClass *      Handle2ThermalNeutronScatteringLaw_incoherentInelastic;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstThermalNeutronScatteringLaw_incoherentInelastic
ThermalNeutronScatteringLaw_incoherentInelasticDefaultConst();
// +++ Create, default
extern_c Handle2ThermalNeutronScatteringLaw_incoherentInelastic
ThermalNeutronScatteringLaw_incoherentInelasticDefault();
// --- Create, general, const
extern_c Handle2ConstThermalNeutronScatteringLaw_incoherentInelastic
ThermalNeutronScatteringLaw_incoherentInelasticCreateConst(
   const char *const label,
   const char *const pid,
   const char *const productFrame,
   const char *const primaryScatterer,
   const bool calculatedAtThermal,
   ConstHandle2ConstScatteringAtoms scatteringAtoms
);
// +++ Create, general
extern_c Handle2ThermalNeutronScatteringLaw_incoherentInelastic
ThermalNeutronScatteringLaw_incoherentInelasticCreate(
   const char *const label,
   const char *const pid,
   const char *const productFrame,
   const char *const primaryScatterer,
   const bool calculatedAtThermal,
   ConstHandle2ConstScatteringAtoms scatteringAtoms
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticAssign(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticDelete(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticRead(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticWrite(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticPrint(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Print to standard output, as XML
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticPrintXML(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Print to standard output, as JSON
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticPrintJSON(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticLabelHas(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Get
// +++ Returns by value
extern_c const char *
ThermalNeutronScatteringLaw_incoherentInelasticLabelGet(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Set
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticLabelSet(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, const char *const label);
// -----------------------------------------------------------------------------
// Metadatum: pid
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticPidHas(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Get
// +++ Returns by value
extern_c const char *
ThermalNeutronScatteringLaw_incoherentInelasticPidGet(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Set
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticPidSet(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, const char *const pid);
// -----------------------------------------------------------------------------
// Metadatum: productFrame
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticProductFrameHas(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Get
// +++ Returns by value
extern_c const char *
ThermalNeutronScatteringLaw_incoherentInelasticProductFrameGet(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Set
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticProductFrameSet(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, const char *const productFrame);
// -----------------------------------------------------------------------------
// Metadatum: primaryScatterer
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLaw_incoherentInelasticPrimaryScattererHas(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Get
// +++ Returns by value
extern_c const char *
ThermalNeutronScatteringLaw_incoherentInelasticPrimaryScattererGet(ConstHandle2ConstThermalNeutronScatteringLaw_incoherentInelastic This);
// +++ Set
extern_c void
ThermalNeutronScatteringLaw_incoherentInelasticPrimaryScattererSet(ConstHandle2ThermalNeutronScatteringLaw_incoherentInelastic This, const char *const primaryScatterer);